Changed how we construct a service to make Java 11 happy